force-app/main/default/objects/df_122_andra_fullmaktshavare_person_2__c/df_122_andra_fullmaktshavare_person_2__c.object-meta.xml
<CustomObject>
    <label>Andra fullmaktshavare (Person 2)</label>
    <nameField>
        <label>Andra fullmaktshavare (Person 2) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Andra fullmaktshavare (Person 2)s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>