force-app/main/default/objects/df_122_andra_fullmaktshavare_person_2__c/fields/frnamn_andra_fullmaktshavare_per_272__c.field-meta.xml
<CustomField>
    <fullName>frnamn_andra_fullmaktshavare_per_272__c</fullName>
    <label>Förnamn 3ba29</label>
    <length>255</length>
    <type>Text</type>
</CustomField>